<?xml version="1.0" encoding="utf-8"?>
<!--
    third: That's How I Roll Dice
        A dice roller for roleplaying nerds.
            http://swords.id.au/third/

    Copyright (c) 2010, Brendan Jurd <bj@swords.id.au>
    All rights reserved.

    third is open-source, licensed under the Simplified BSD License, a copy of
    which can be found in the file LICENSE at the top level of the source code.
    -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/trigger_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:id="@+id/trigger_preset"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/config"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        >
        <TextView
            android:id="@+id/trigger_die_label"
            android:text="@string/trigger_die_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_label"
            />
        <Spinner
            android:id="@+id/trigger_dice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/trigger_die_prompt"
            style="@style/input"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/dividerHorizontal"
            />

        <TextView
            android:id="@+id/trigger_results_label"
            android:text="@string/trigger_results_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_label"
            />
        <EditText
            android:id="@+id/trigger_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/trigger_results_hint"
            style="@style/input"
            />
        <TextView
            android:text="@string/trigger_results_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_help"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/dividerHorizontal"
            />

        <TextView
            android:id="@+id/trigger_type_label"
            android:text="@string/trigger_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_label"
            />
        <Spinner
            android:id="@+id/trigger_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/trigger_type_prompt"
            style="@style/input"
            />
        <TextView
            android:id="@+id/trigger_type_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input_help"
            />
    </LinearLayout>
</LinearLayout>
