<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    >
    <TableLayout
		android:id="@+id/counters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/config"
            android:text="@string/empty_config"
            android:gravity="center_horizontal"
            android:layout_weight="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <ListView
            android:id="@+id/log"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            />
        <TextView
            android:id="@+id/result"
            android:text=""
            android:gravity="center_horizontal"
            android:layout_weight="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_weight="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/roll"
                android:text="@string/roll"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/reset"
                android:text="@string/reset"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
